# memorylane

./: .env.example  .gitignore  CLAUDE.md  HANDLEIDING.md  MOBILE_INBOX_PLAN.md  PERSONALIZATION_PLAN.md  REBUILD_PLAN.md  captureflow.md  console.txt  event.md  index.html  package-lock.json  package.json  prd.md  vite.config.ts
.claude/: settings.local.json
docs/: SESSION_2024-12-25_CHANGES.md
inbox/: HANDLEIDING.md
inbox/pwa/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
inbox/pwa/scripts/: gen-vectors.ts
inbox/pwa/src/: App.tsx  main.tsx  pair.test.ts  pair.ts  theme.css  util.ts
inbox/pwa/src/api/: client.ts
inbox/pwa/src/crypto/: blob.ts  envelope.ts  vectors.ts
inbox/pwa/src/screens/: DatePicker.tsx  InstallHint.tsx  NewMemory.tsx  Outbox.tsx  Pair.tsx  ScanQr.tsx  Settings.tsx  UploadView.tsx
inbox/pwa/src/store/: db.ts
inbox/pwa/src/upload/: queue.ts
inbox/pwa/test/: crypto.test.ts
inbox/shared/test-vectors/: vectors.json
inbox/worker/: README.md  cors.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
inbox/worker/migrations/: 0001_init.sql
inbox/worker/src/: api-types.ts  auth.ts  config.ts  cron.ts  http.ts  index.ts  mailboxes.ts  memories.ts  presign.ts  r2.ts  util.ts
inbox/worker/test/: api.test.ts  apply-migrations.ts
sessies/: 221225_2.txt  221225_3.txt  271225.txt  MCP Server Setup.txt  dropout.txt
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  index.rs  lib.rs  media.rs  model.rs  vault.rs
src-tauri/src/inbox/: api.rs  crypto.rs  import.rs  mod.rs  store.rs
src-tauri/src/media/: cache.rs  decode.rs  exif_read.rs  hash.rs  media_tests.rs  serve.rs  thumbs.rs
src-tauri/src/vault/: canvas.rs  fixture_tests.rs  frontmatter.rs  materialize.rs  scanner.rs  writer.rs
src/app/: AppShell.tsx  FocusVideoLayer.tsx  Root.tsx  Screensaver.tsx  SettingsPhone.tsx  icons.tsx
src/assets/fonts/: OFL-LICENSES.md
src/components/: AudioViewer.tsx  CategorySelect.tsx  ConfirmDialog.tsx  EditMemoryDialog.tsx  EventPropertiesDialog.tsx  LinkViewer.tsx  PhotoViewer.tsx  QuickAdd.tsx  SearchModal.tsx  TagInput.tsx  TextViewer.tsx
src/components/settings/: SettingsAbout.tsx  SettingsAppearance.tsx  SettingsCategories.tsx  SettingsModal.tsx  SettingsStorage.tsx  SettingsTimelineFilters.tsx  index.ts
src/db/: database.ts  fileStorage.ts  mediaStorage.ts  thumbnailCache.ts
src/db/markdown/: generator.ts  index.ts  parser.ts  schema.ts
src/db/migration/: index.ts  v1-to-v2.ts
src/db/sync/: index.ts  indexer.ts  syncService.ts  writer.ts
src/lib/: backend.ts
src/models/: types.ts
src/render/core/: camera.ts  decode.worker.ts  engine.ts  gestures.ts  lod.ts  textures.ts
src/render/harness/: PerfHarness.tsx  benchmark.ts  scene.ts
src/render/scenes/: event.ts  focus.ts  lifeline.ts  scene.ts  types.ts  year.ts
src/theme/: fonts.ts  registry.ts  resolve.ts  textures.ts  tokens.ts  ui.ts
src/timeline/: Timeline.tsx  viewportCulling.ts
src/utils/: exif.ts
tasks/session-logs/: 2026-07-17.md
