[package]
name = "app"
version = "2.0.0"
description = "MemoryLane - local-first zoomable memory timeline"
authors = ["Jim"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.40", features = ["bundled"] }
chrono = "0.4"
image = "0.25"
blake3 = "1"

[dev-dependencies]
tempfile = "3"
