[package]
name = "app"
version = "2.0.0"
description = "MemoryLane - local-first zoomable memory timeline"
authors = ["Jim"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.7"
rusqlite = { version = "0.40", features = ["bundled"] }
chrono = "0.4"
image = "0.25"
kamadak-exif = "0.6"
blake3 = "1"
uuid = { version = "1", features = ["v4"] }
trash = "5"
# Inbox-cryptolaag (mobiele brievenbus): AES-256-GCM + HKDF-SHA256, spiegel van
# de TS-kant (inbox/pwa/src/crypto). Bewezen byte-identiek via de gedeelde vectoren.
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
# Inbox desktop-pairing (fase 4): HTTPS naar de brievenbus-Worker (rustls, geen
# OpenSSL), geheime opslag in de Windows Credential Manager, en QR-encoding.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
keyring = { version = "3", features = ["windows-native"] }
base64 = "0.22"
rand = "0.8"

[dev-dependencies]
tempfile = "3"

# Optimaliseer dependencies (image-decode, resize, JPEG-encode) óók in het
# dev-profiel. Zonder dit compileert `npm run tauri dev` de `image`-crate op
# opt-level 0 en is een 1024px-thumbnail genereren ~20-50x trager (seconden i.p.v.
# milliseconden). Onze eigen code blijft op opt-level 0 → normaal debugbaar.
[profile.dev.package."*"]
opt-level = 3
